[package]
name = "line_botx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-web-opentelemetry = {version = "0.13" , features = ["metrics"]}
env_logger = "0.10"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
openssl =  { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.18" , features = ["rt-tokio"]}
opentelemetry-application-insights = { version = "0.23" , features = ["reqwest-client","metrics"]}
reqwest = {version = "0.11", features = ["json"]}
serde_derive = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.18"
tracing = "0.1"
#chatgpt_rs = "0.6"
tokio = "1"
