[package]
name = "line_botx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
pretty_env_logger = "0.5"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
#openssl =  { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", default-features = false,features = ["json","rustls-tls"] }
serde_derive = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
tokio = "1"
futures-util = "0.3"
opentelemetry-application-insights = {version = "0.29",default-features = false , features = ["reqwest-client-rustls","live-metrics","metrics"]}
opentelemetry = {version = "0.21", features = ["trace","logs","metrics"]}
actix-web-opentelemetry = "0.16"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.22"
tracing-subscriber = {version = "0.3"}
tracing-actix-web = "0.7"
